--- a/client/topmate-readme-badge/src/Components/CodeComponent/CodeComponent.css
+++ b/client/topmate-readme-badge/src/Components/CodeComponent/CodeComponent.css
@@ -19,6 +19,7 @@
     justify-content: space-between;
     align-items: center;
     border-style: dashed;
+    border-radius: 3px;
     border-color: #a1a5a8;
 }
 
